trunk/Archive2/5d/a25c90f6aaa056/output
main.cpp:3:5: error: call to function 'foo' that is neither visible in the template definition nor found by argument-dependent lookup
    foo(t);
    ^
main.cpp:11:5: note: in instantiation of function template specialization 'bar<int>' requested here
    bar(42);
    ^
main.cpp:8:6: note: 'foo' should be declared prior to the call site
void foo(T t) {}
     ^
1 error generated.
