trunk/Archive2/5d/a25c90f6aaa056/main.cpp
template <typename T>
void bar(T t) {
    foo(t);

}

template <typename T>
void foo(T t) {}

int main() {
    bar(42);

}
